Fixed numerous bugs in dragging, aligning, and automatic totalling.

--- a/src/sw-table.css
+++ b/src/sw-table.css
@@ -431,6 +431,11 @@ table.sw-sst_search_sort_table10 tr:hover td {
   text-decoration: none;
 }
 
+.sw-sst_pre {
+  /*  font-family: inherit; */
+  white-space: pre-line;
+}
+
 .sw-sst_checkbox_bold {
   font-size: 12pt;
   font-weight: bold;
